// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Grid /> it renders Grid with props 1`] = `
<div
  className="mfui-grid custom-class-name"
>
  <div
    className="mfui-grid__container mfui-grid__container_h-align_right mfui-grid__container_v-align_top mfui-grid__container_gutters-left_large mfui-grid__container_gutters-bottom_medium"
  >
    <GridColumn
      className="mfui-grid__column mfui-grid__column_gutter-left_large mfui-grid__column_gutter-bottom_medium"
      key=".0"
    >
      child1
    </GridColumn>
    <GridColumn
      className="mfui-grid__column mfui-grid__column_gutter-left_large mfui-grid__column_gutter-bottom_medium"
      key=".1"
    >
      child2
    </GridColumn>
  </div>
</div>
`;

exports[`<Grid /> it renders Grid without props 1`] = `
<div
  className="mfui-grid"
>
  <div
    className="mfui-grid__container mfui-grid__container_multi-row"
  >
    <GridColumn
      className="mfui-grid__column"
      key=".0"
    >
      child1
    </GridColumn>
    <GridColumn
      className="mfui-grid__column"
      key=".1"
    >
      child2
    </GridColumn>
  </div>
</div>
`;
